# robot_controllers

./: LICENSE  README.md  octave-workspace
robot_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml  robot_controllers.xml  setup.py
robot_controllers/include/robot_controllers/: cartesian_pose.h  cartesian_twist.h  cartesian_wrench.h  diff_drive_base.h  diff_drive_limiter.h  follow_joint_trajectory.h  gravity_compensation.h  linear_lookup_table.h  mimic_joint_handle.h  parallel_gripper.h  pid.h  point_head.h  scaled_mimic.h  trajectory.h  trajectory_spline_sampler.h
robot_controllers/scripts/: accel_test.py
robot_controllers/src/: cartesian_pose.cpp  cartesian_twist.cpp  cartesian_wrench.cpp  diff_drive_base.cpp  diff_drive_limiter.cpp  follow_joint_trajectory.cpp  force_estimation.cpp  gravity_compensation.cpp  linear_lookup_table.cpp  mimic_joint_handle.cpp  parallel_gripper.cpp  pid.cpp  point_head.cpp  robot_controllers_python.cpp  scaled_mimic.cpp
robot_controllers/src/robot_controllers/: init.py
robot_controllers/test/: CMakeLists.txt  diff_drive_limiter_test.cpp  linear_lookup_table_ros_test.cpp  linear_lookup_table_ros_test.test  linear_lookup_table_test.cpp  trajectory_tests.cpp
robot_controllers_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_controllers_interface/include/robot_controllers_interface/: controller.h  controller_loader.h  controller_manager.h  gyro_handle.h  handle.h  joint_handle.h  utils.h
robot_controllers_interface/scripts/: get_controller_state.py  start_controller.py  stop_controller.py
robot_controllers_interface/src/: controller_loader.cpp  controller_manager.cpp
robot_controllers_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_controllers_msgs/action/: QueryControllerStates.action
robot_controllers_msgs/msg/: ControllerState.msg  DiffDriveLimiterParams.msg
robot_controllers_msgs/srv/: QueryControllerStates.srv
