<?xml version="1.0"?>
<package format="3">
  <name>robot_controllers</name>
  <version>0.7.0</version>
  <description>
    Some basic robot controllers for use with robot_controllers_interface.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="csaldanha@fetchrobotics.com">Carl Saldanha</maintainer>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>nav_msgs</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>
  <depend>pluginlib</depend>
  <depend>robot_controllers_interface</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

  <export>
    <robot_controllers plugin="${prefix}/robot_controllers.xml"/>
  </export>
</package>
