<package>
  <name>robot_controllers_msgs</name>
  <version>0.7.0</version>
  <description>
    Messages for use with robot_controllers framework.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="csaldanha@fetchrobotics.com">Carl Saldanha</maintainer>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
