<?xml version="1.0"?>
<package format="3">
  <name>robot_controllers_msgs</name>
  <version>0.9.1</version>
  <description>
    Messages for use with robot_controllers framework.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="narora@fetchrobotics.com">Niharika Arora</maintainer>
  <maintainer email="csaldanha@fetchrobotics.com">Carl Saldanha</maintainer>
  <maintainer email="erelson@fetchrobotics.com">Eric Relson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
